--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "vue-spinner": "^1.0.2",
     "vue-strap": "^1.0.7",
     "vue-style-loader": "^1.0.0",
+    "vue-weui": "^0.2.0",
     "vuex": "^0.6.2",
     "vuex-router-sync": "^1.0.0",
     "webpack": "^1.12.2",
